<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RationAlgoActivity">

    <TextView
        android:id="@+id/title_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/tangential_algorithm"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coordinate_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_0"
        android:text="@string/coor"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/time_used_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinate_0"
        android:text="@string/time"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_used_0"
        android:paddingTop="20dp"
        android:text="@string/cramer_rules_on_circular"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coordinate_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_1"
        android:text="@string/coor"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/time_used_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinate_1"
        android:text="@string/time"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_used_1"
        android:paddingTop="20dp"
        android:text="@string/gaussian_elimination_on_circular"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coordinate_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_2"
        android:text="@string/coor"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/time_used_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinate_2"
        android:text="@string/time"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_used_2"
        android:paddingTop="20dp"
        android:text="@string/center_of_gravity_algorithm"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coordinate_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_3"
        android:text="@string/coor"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/time_used_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinate_3"
        android:text="@string/time"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/input_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_y"
        android:ems="10"
        android:hint="@string/actual_x"
        android:inputType="number|numberDecimal"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/input_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/actual_y"
        android:inputType="numberDecimal"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:paddingBottom="20dp" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onRefreshClicked"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="10dp"/>



</RelativeLayout>